--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,10 @@ nav{
 }
 
 .ttc-board{
-    background-color: blue;
     position: relative;
     width: 300px;
     height: 300px;
-    margin: auto;
+    margin: 50px auto auto;
     display: grid;
     gap: 5px;
     grid-template-columns: auto auto auto;
@@ -41,12 +40,11 @@ nav{
 }
 
 .ttc-square{
-    background-color: white;
     width: auto;
     height: auto;
 }
 
 .ttc-square:hover{
-    background-color: green;
+    background-color: rgb(107, 90, 67);
     cursor: pointer;
 }
